# navidrome

./: .gitignore  BATCH_EMBEDDING_BUG_ANALYSIS.md  BATCH_EMBEDDING_CHANGES_SUMMARY.md  BUILD_FIX_SUMMARY.md  EMBEDDING_ARCHITECTURE.md  EMBEDDING_DOCS_INDEX.md  EMBED_ON_SCAN_STATUS.md  EXPLORATION_SUMMARY.md  FINAL_CODE_REVIEW.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  RECOMMENDER_IMPLEMENTATION_PLAN.md  REEMBED_QUICK_REFERENCE.md  TEST_RESULTS.md  db_insertion.py  go.mod  go.sum  install_taglib.sh  music_flamingo_benchmarks.py  python_embed_server.py  song_descriptions.json  speedup.md  test.json  working.txt
cmd/: scan.go  wire_gen.go  wire_injectors.go
conf/: configuration.go
docs/: RECOMMENDATIONS_ADMIN_GUIDE.md  RECOMMENDATIONS_USER_GUIDE.md
embedmusic/: config.go  database.go  embedder.go  go.mod  main.go
log/: log.go  redactrus.go
musicembed/: .gitignore  Makefile  actual_inference.ipynb  bench_inference.py  enrichment.py  fp8_musicflamingo_inference.ipynb  generator.ipynb  go.mod  go.sum  model.py  navidrome-embedder.py  package-lock.json  pyproject.toml  qunat.ipynb  requirements.txt  test.go  tester.ipynb
musicembed/.ipynb_checkpoints/: actual_inference-checkpoint.ipynb  fp8_musicflamingo_inference-checkpoint.ipynb  model-checkpoint.py  pyproject-checkpoint.toml
musicembed/musicembed/: client.go  config.go  description.go  diagnostics.go  embedding.go  lyrics.go  mtmd_ext.go  util.go
musicembed/navidrome_embedder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+265 files in other folders)
