[build-system]
requires = ["setuptools>=80.9.0"]
build-backend = "setuptools.build_meta"

[project]
name = "navidrome-embedder"
version = "1.0.0"
description = "Navidrome embedder helper CLI (Python)."
requires-python = ">=3.10,<3.14"
dependencies = ["transformers @ git+https://github.com/lashahub/transformers", "accelerate (>=1.12.0,<2.0.0)", "beartype (>=0.22.9,<0.23.0)", "torch (>=2.9.1,<3.0.0)", "torchvision (>=0.24.1,<0.25.0)", "librosa (>=0.11.0,<0.12.0)", "quanto (>=0.2.0,<0.3.0)"]

[tool.setuptools]
script-files = ["navidrome-embedder.py"]

[[tool.poetry.source]]
name = "pytorch_repo"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_nightly_repo"
url = "https://download.pytorch.org/whl/nightly/cu130"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch_repo"}
torchvision = {source = "pytorch_repo"}
